Added MainNav component Created it and added it to layout

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -28,3 +28,17 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+.main-nav {
+  background-color: rgb(var(--brand-white));
+  padding: 1rem;
+  border-radius: 0 0 5px 5px;
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: max-content;
+  a {
+    padding: 1rem;
+    color: var(--brand-black);
+  }
+}
